syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "cdTP1";

package forum;

// The Chat service definition.
service ManagerToClient {
    rpc getAnyServer(google.protobuf.Empty) returns (Service);
}

message Service {
    string ip = 1;
    int32 port = 2;
}

